--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-"scripts": {
-  "start": "node index.js"
-}
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AkatsukiTousti/Balance.git"
