--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "projet_balance",
   "version": "1.0.0",
+  "description": "Projet de connexion à l'API Withings",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "axios": "^1.6.0"
   },
   "repository": {
     "type": "git",
@@ -16,6 +20,5 @@
   "bugs": {
     "url": "https://github.com/AkatsukiTousti/Balance/issues"
   },
-  "homepage": "https://github.com/AkatsukiTousti/Balance#readme",
-  "description": ""
+  "homepage": "https://github.com/AkatsukiTousti/Balance#readme"
 }
