--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "projet_balance",
   "version": "1.0.0",
   "description": "Projet de connexion à l'API Withings",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
