--- a/Balance/app/src/main/AndroidManifest.xml
+++ b/Balance/app/src/main/AndroidManifest.xml
@@ -1,39 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.balance">
-
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Balance"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Balance">
 
-        <activity android:name=".MainActivity" android:exported="true">
+        <!-- Activity principale avec EXPORTÉ obligatoire -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-                    <action android:name="android.intent.action.VIEW" />
-                    <category android:name="android.intent.category.DEFAULT" />
-                    <category android:name="android.intent.category.BROWSABLE" />
-                    <data android:scheme="https" android:host="balance-xln2.onrender.com" />
-
-
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- Déclaration des activités -->
-        <activity android:name=".LoginActivity" android:exported="true"/>
-        <activity android:name=".RegisterActivity" android:exported="true"/>
+        <!-- Autres activités -->
+        <activity android:name=".MainActivity" android:exported="false"/>
+        <activity android:name=".RegisterActivity" android:exported="false"/>
 
     </application>
 
