--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "express": "^4.18.2",
-    "axios": "^1.6.0"
-  },
+    "dotenv": "^16.0.3"
+  }
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AkatsukiTousti/Balance.git"
