--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "projet_balance",
+  "name": "balance-server",
   "version": "1.0.0",
-  "description": "Projet de connexion à l'API Withings",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "dependencies": {
-    "axios": "^1.3.5",
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "axios": "^1.5.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AkatsukiTousti/Balance.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AkatsukiTousti/Balance/issues"
-  },
-  "homepage": "https://github.com/AkatsukiTousti/Balance#readme"
 }
